--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,14 @@
             <scope>provided</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>3.3.5</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
